2008-03-03  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
	VERSION file to variable cygbuild_opt_exclude_tmp_files.
	(CygbuildMakefilePrefixCheck): Adjust grep to find prefix=
	(CygbuildCmdFilesWrite): Fix variable name from 'to' to 'todir'.
	(CygbuildPatchList): Ignore */tmp/* directories.
	(CygbuildConfOptionAdjustment): Notify about --with and --without
	options in ./configure.
	(CygbuildCmdBuildStdMakefile): move set -x call.
	(CygbuildInstallFixEtcdirInstall): Add --quiet to egrep.
	(CygbuildBootVariablesGlobalCacheSet): Add
	CYGBUILD_CACHE_PERL_FILES.
	(CygbuildDefineGlobalPerl): New.
	(CygbuildDefineGlobalCommands): Define CYGPATH, CYGCHECK.
	(CygbuildPerlLibraryDependsGuess): New
	(CygbuildPerlLibraryDependsMain): Rewrite.
	(CygbuildPerlLibraryDependsCache): New. Use
	CYGBUILD_CACHE_PERL_FILES.
	(CygbuildPerlLibraryList): Improve regexp to ignore comment lines.

2008-03-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildIsMakefileCstandard): New.
	(CygbuildIsMakefileCstandard): Restore from revno:40a593c
	(CygbuildIsCplusplusPackage): Restore from revno:40a593c
	(CygbuildBootVariablesGlobalMain): Add perllocal.pod
	to variable CYGBUILD_TAR_EXCLUDE.
	(CygbuildCygcheckLibraryDepMain): Add prefix 'depends: '
	to all messages.

2008-03-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (dir): (CygbuildMakefileRunInstallCygwinOptions):
	Fix reading of variable makefile.
	(CygbuildMakefilePrefixCheck): Improve prefix check.
	(CygbuildMakefilePrefixIsStandard): Improve prefix check.
	(CygbuildBootVariablesId): Adjust PATH setting.
	(CygbuildMakeRunInstallFixPerlPostinstall): Improve postinstall
	snippet.
	(CygbuildInstallFixEtcdirInstall): Disregard pre/postinstall
	directory.
	(CygbuildCmdInstallCheckDocdir): Remeove head(1); won't work
	on image files.
	(CygbuildInstallFixInterpreterMain): Tighten regexp.
	(CygbuildInstallFixInterpreterPerl): Improce substitution.