@@ -1,3 +1,11 @@
+2008-03-04  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh: (CygbuildCmdInstallCheckBinFiles): Add
+	bash and gawk dependency check.
+	(CygbuildIsDarcsPackage): New.
+	(CygbuildIsMonotonePackage): New.
+	(CygbuildVersionControlType): Add Monotone, Darcs detection.
+
 2008-03-03  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
